# chat-sse-demo

./: .clever.json  Cargo.toml  README.md
src/: feeder.rs  lib.rs  main.rs  state.rs
src/handlers/: index.rs  login.rs  mod.rs  send.rs  sse.rs
src/types/: mod.rs
static/css/: login.css  main.css
static/js/: chat-message.js
templates/: index.html  login.html  message.html
