[package]
name = "chat-sse-demo"
version = "0.1.0"
edition = "2024"

[profile.release]
strip = "debuginfo"
opt-level = "z"

[dependencies]
anyhow = "1.0.98"
askama = "0.14.0"
axum = { version = "0.8", features = ["macros"] }
axum-extra = { version = "0.10.1", features = ["typed-header", "cookie"] }
futures-util = { version = "0.3", default-features = false, features = [
  "sink",
  "std",
] }
headers = "0.4"
serde = { version = "1.0.219", features = ["derive"] }
time = "0.3"
tokio = { version = "1.46.1", features = ["full"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
tower-http = { version = "0.6.6", features = ["fs"] }
ulid = { version = "1.2.1", features = ["serde"] }
